--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,7 +7,7 @@
       <ion-row>
         <ion-col><ion-popover trigger="click-trigger" triggerAction="clickius">
         <ng-template>
-        <ion-content class="ion-padding">username:<ion-input label="" placeholder="Enter usernameee"></ion-input></ion-content>
+        <ion-content class="ion-padding">username:<ion-input label="" placeholder="Enter username"></ion-input></ion-content>
         <ion-content class="ion-padding">Goal:<ion-input label="" placeholder="Enter Goal"></ion-input></ion-content>
       </ng-template>
 </ion-popover></ion-col>
